--- a/RomaiSzamok.html
+++ b/RomaiSzamok.html
@@ -12,6 +12,7 @@
   function romai(n) {
   
 	 const romaiszamok = [
+	{ ertek: 5, romaiszam: 'V' },
 	{ ertek: 4, romaiszam: 'IV' },
     { ertek: 1, romaiszam: 'I' }
   ];
@@ -45,6 +46,10 @@
 	
 	QUnit.test('negy', function(assert) {
       assert.equal(romai(4),'IV');
+    });
+	
+	QUnit.test('ot', function(assert) {
+      assert.equal(romai(5),'V');
     });
 	
 	
