--- a/RomaiSzamok.html
+++ b/RomaiSzamok.html
@@ -52,6 +52,17 @@
       assert.equal(romai(5),'V');
     });
 	
+	QUnit.test('hat', function(assert) {
+      assert.equal(romai(6),'VI');
+    });
+	
+	QUnit.test('het', function(assert) {
+      assert.equal(romai(7),'VII');
+    });
+	
+	QUnit.test('nyolc', function(assert) {
+      assert.equal(romai(8),'VIII');
+    });
 	
   });
   
