--- a/RomaiSzamok.html
+++ b/RomaiSzamok.html
@@ -12,11 +12,12 @@
   function romai(n) {
   
 	 const romaiszamok = [
+	{ ertek: 40, romaiszam: 'XL' },
 	{ ertek: 10, romaiszam: 'X' },
 	{ ertek: 9, romaiszam: 'IX' },
 	{ ertek: 5, romaiszam: 'V' },
 	{ ertek: 4, romaiszam: 'IV' },
-    	{ ertek: 1, romaiszam: 'I' }
+    { ertek: 1, romaiszam: 'I' }
   ];
 
   let eredmeny = '';
@@ -72,6 +73,14 @@
 	
 	QUnit.test('tiz', function(assert) {
       assert.equal(romai(10),'X');
+    });
+	
+	QUnit.test('tizennegy', function(assert) {
+      assert.equal(romai(14),'XIV');
+    });
+	
+	QUnit.test('negyven', function(assert) {
+      assert.equal(romai(40),'XL');
     });
 	
   });
